[UPDATE] add fcns

--- a/package.json
+++ b/package.json
@@ -27,10 +27,39 @@
     "url": "https://github.com/distributions-io/distributions.io/issues"
   },
   "dependencies": {
+    "distributions-cauchy-cdf": "0.0.0",
+    "distributions-cauchy-pdf": "0.0.2",
+    "distributions-cauchy-quantile": "0.0.0",
     "distributions-exponential-cdf": "0.0.1",
+    "distributions-exponential-ekurtosis": "0.0.0",
+    "distributions-exponential-mean": "0.0.0",
+    "distributions-exponential-median": "0.0.0",
     "distributions-exponential-mgf": "0.0.0",
     "distributions-exponential-pdf": "0.0.1",
-    "distributions-exponential-quantile": "0.0.1"
+    "distributions-exponential-quantile": "0.0.1",
+    "distributions-exponential-skewness": "0.0.0",
+    "distributions-exponential-variance": "0.0.0",
+    "distributions-gumbel-cdf": "0.0.0",
+    "distributions-gumbel-pdf": "0.0.0",
+    "distributions-gumbel-quantile": "0.0.0",
+    "distributions-normal-cdf": "0.0.1",
+    "distributions-normal-pdf": "0.0.2",
+    "distributions-normal-quantile": "0.0.0",
+    "distributions-normal-random": "0.0.0",
+    "distributions-poisson-ekurtosis": "0.0.0",
+    "distributions-poisson-mean": "0.0.0",
+    "distributions-poisson-median": "0.0.0",
+    "distributions-poisson-variance": "0.0.0",
+    "distributions-rayleigh-cdf": "0.0.1",
+    "distributions-rayleigh-ekurtosis": "0.0.0",
+    "distributions-rayleigh-entropy": "0.0.0",
+    "distributions-rayleigh-mean": "0.0.0",
+    "distributions-rayleigh-median": "0.0.0",
+    "distributions-rayleigh-pdf": "0.0.1",
+    "distributions-rayleigh-quantile": "0.0.2",
+    "distributions-rayleigh-skewness": "0.0.0",
+    "distributions-rayleigh-variance": "0.0.0",
+    "distributions-t-pdf": "0.0.1"
   },
   "devDependencies": {
     "chai": "3.x.x",
