Add finished packages + tests

--- a/package.json
+++ b/package.json
@@ -39,6 +39,16 @@
     "distributions-exponential-quantile": "0.0.1",
     "distributions-exponential-skewness": "0.0.0",
     "distributions-exponential-variance": "0.0.0",
+    "distributions-geometric-cdf": "0.0.0",
+    "distributions-geometric-ekurtosis": "0.0.0",
+    "distributions-geometric-entropy": "0.0.0",
+    "distributions-geometric-mean": "0.0.0",
+    "distributions-geometric-median": "0.0.0",
+    "distributions-geometric-mgf": "0.0.0",
+    "distributions-geometric-pmf": "0.0.1",
+    "distributions-geometric-quantile": "0.0.1",
+    "distributions-geometric-skewness": "0.0.0",
+    "distributions-geometric-variance": "0.0.1",
     "distributions-gumbel-cdf": "0.0.0",
     "distributions-gumbel-pdf": "0.0.0",
     "distributions-gumbel-quantile": "0.0.0",
@@ -46,9 +56,12 @@
     "distributions-normal-pdf": "0.0.2",
     "distributions-normal-quantile": "0.0.0",
     "distributions-normal-random": "0.0.0",
+    "distributions-poisson-cdf": "0.0.2",
     "distributions-poisson-ekurtosis": "0.0.0",
     "distributions-poisson-mean": "0.0.0",
     "distributions-poisson-median": "0.0.0",
+    "distributions-poisson-pmf": "0.0.1",
+    "distributions-poisson-quantile": "0.0.0",
     "distributions-poisson-variance": "0.0.0",
     "distributions-rayleigh-cdf": "0.0.1",
     "distributions-rayleigh-ekurtosis": "0.0.0",
