Add laplace and logistic modules

--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
     "distributions-gumbel-cdf": "0.0.0",
     "distributions-gumbel-pdf": "0.0.0",
     "distributions-gumbel-quantile": "0.0.0",
+    "distributions-laplace-cdf": "0.0.0",
+    "distributions-laplace-pdf": "0.0.1",
+    "distributions-laplace-quantile": "0.0.1",
+    "distributions-logistic-cdf": "0.0.0",
+    "distributions-logistic-pdf": "0.0.1",
+    "distributions-logistic-quantile": "0.0.0",
     "distributions-normal-cdf": "0.0.1",
     "distributions-normal-pdf": "0.0.2",
     "distributions-normal-quantile": "0.0.0",
