Add Pareto pdf, quantile + cdf modules

--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "distributions-normal-pdf": "0.0.2",
     "distributions-normal-quantile": "0.0.0",
     "distributions-normal-random": "0.0.0",
+    "distributions-pareto-type1-cdf": "0.0.0",
+    "distributions-pareto-type1-pdf": "0.0.0",
+    "distributions-pareto-type1-quantile": "0.0.0",
     "distributions-poisson-cdf": "0.0.2",
     "distributions-poisson-ekurtosis": "0.0.0",
     "distributions-poisson-mean": "0.0.0",
